<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvResult"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:padding="0dp"
        android:text="@string/_0"
        android:textAlignment="viewEnd"
        android:textColor="@color/grey"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_0"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="64dp" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:backgroundTint="@color/grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_change_sign"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/plus_minus"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:backgroundTint="@color/grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_percent"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/percent"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:backgroundTint="@color/grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="46dp"
                app:toggleCheckedStateOnClick="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="46dp"
                app:toggleCheckedStateOnClick="true"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_subtract"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="46dp"
                app:toggleCheckedStateOnClick="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_add"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="46dp"
                app:toggleCheckedStateOnClick="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/_0"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/dark_grey"
                app:cornerRadius="46dp" />

            <Button
                android:id="@+id/button_equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/orange"
                android:hapticFeedbackEnabled="true"
                android:onClick="onClick"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="46dp"
                app:toggleCheckedStateOnClick="true" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>